uncomment character polling system

--- a/app/views/games/_main.html.erb
+++ b/app/views/games/_main.html.erb
@@ -492,7 +492,7 @@
             }
         }
         // Call myself every 3 seconds after the last time I have been called.
-        //characterPoll = setTimeout(() => {renderAllCharacters()}, 3000)
+        characterPoll = setTimeout(() => {renderAllCharacters()}, 3000)
     }
 
     function move(direction) {
