added js for _shop into its own file

--- a/app/views/games/_main.html.erb
+++ b/app/views/games/_main.html.erb
@@ -531,8 +531,7 @@
         displayCurrentBiome();
         refreshTileInfo(x, y);
 
-        // I am disabling the buttons on movement and re-enabling them after 0.5 seconds to allow for the movement to
-        // refresh.
+        // Disable the buttons on movement and re-enabling them after 0.5 seconds
         setTimeout(()=>{
             moveButtons.forEach((button) => {
               button.disabled = false
