added better picture loading

--- a/app/views/games/_shop.html.erb
+++ b/app/views/games/_shop.html.erb
@@ -143,7 +143,7 @@
             });
         });
 
-        document.querySelector(".main-tablinks[data-section='ShopSection']").click();
+        document.querySelector(".main-tablinks[data-section='GameSection']").click();
     }
 
     function initializeShopTabs() {
